feat: add general dynamic routing

--- a/bom-front/src/app/app.component.html
+++ b/bom-front/src/app/app.component.html
@@ -505,6 +505,9 @@
 
 </div>
 
-<router-outlet></router-outlet> -->
+-->
 
-<main-nav></main-nav>
+<main-nav>
+    <router-outlet></router-outlet>
+    test
+</main-nav>
