--- a/bom-front/src/app/main-nav/main-nav.component.html
+++ b/bom-front/src/app/main-nav/main-nav.component.html
@@ -3,9 +3,12 @@
         [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
         <mat-toolbar>Menu</mat-toolbar>
         <mat-nav-list>
-            <a mat-list-item href="#">Link 1</a>
-            <a mat-list-item href="#">Link 2</a>
-            <a mat-list-item href="#">Link 3</a>
+            <a mat-list-item [routerLink]="['/journal']" >JOURNAL</a>
+            <a mat-list-item href="#">BOUTIQUE</a>
+            <a mat-list-item href="#">PROJETS</a>
+            <a mat-list-item href="#">À PROPOS</a>
+            <a mat-list-item href="#">ESPACE PROFESSIONNEL</a>
+            <a mat-list-item [routerLink]="['/contact']">CONTACT</a>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
