feat: add multiple view on tabbar

--- a/bom-front/src/app/main-nav/main-nav.component.html
+++ b/bom-front/src/app/main-nav/main-nav.component.html
@@ -5,9 +5,12 @@
     <mat-nav-list>
       <a mat-list-item [routerLink]="['/journal']" >JOURNAL</a>
       <a mat-list-item href="#">BOUTIQUE</a>
-      <a mat-list-item href="#">PROJETS</a>
       <a mat-list-item href="#">À PROPOS</a>
       <a mat-list-item href="#">ESPACE PROFESSIONNEL</a>
+      <a mat-list-item href="#">PROJETS</a>
+      <a mat-list-item [routerLink]="['/temoignage']">TEMOIGNAGE</a>
+      <a mat-list-item [routerLink]="['/qui-sommes-nous']">QUI SOMMES NOUS</a>
+      <a mat-list-item [routerLink]="['/back-office']">ADMINISTRATEUR</a>
       <a mat-list-item [routerLink]="['/contact']">CONTACT</a>
     </mat-nav-list>
   </mat-sidenav>
