--- a/bom-front/src/app/main/account-manager/login/login.component.html
+++ b/bom-front/src/app/main/account-manager/login/login.component.html
@@ -1,20 +1,26 @@
 <p>login works!</p>
 
-<form name="loginForm" [formGroup]="loginForm" novalidate (ngSubmit)="onSubmit()">
+<form name="loginForm" [formGroup]="m_loginForm" novalidate (ngSubmit)="onSubmit()">
 
     <mat-form-field appearance="outline">
-        <mat-label>{{'LOGIN.NAME'}}</mat-label>
-        <input matInput type="text" formControlName="username">
+        <mat-label>{{'LOGIN.EMAIL'}}</mat-label>
+        <input matInput type="email" formControlName="email" email="true">
+        <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
+          L'adresse email est invalide.
+        </mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
         <mat-label>{{'LOGIN.PASSWORD'}}</mat-label>
-        <input matInput type="password" formControlName="password">
+        <input matInput type="password" formControlName="password" required minlength="6">
+        <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
+          Saissisez votre mot de passe.
+        </mat-error>
         <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
-       
+
     </mat-form-field>
 
-    <button mat-raised-button class="submit-button" color="accent" [disabled]="loginForm.invalid"
+    <button mat-raised-button class="submit-button" color="accent" [disabled]="m_loginForm.invalid"
         style="white-space: pre-wrap !important;">
         Valider
     </button>
