--- a/bom-front/src/app/main/account-manager/login/login.component.html
+++ b/bom-front/src/app/main/account-manager/login/login.component.html
@@ -1,27 +1,42 @@
 <p>login works!</p>
 
-<form name="loginForm" [formGroup]="m_loginForm" novalidate (ngSubmit)="onSubmit()">
-
-    <mat-form-field appearance="outline">
-        <mat-label>{{'LOGIN.EMAIL'}}</mat-label>
-        <input matInput type="email" formControlName="email" email="true">
-        <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
-          L'adresse email est invalide.
-        </mat-error>
-    </mat-form-field>
-
-    <mat-form-field appearance="outline">
-        <mat-label>{{'LOGIN.PASSWORD'}}</mat-label>
-        <input matInput type="password" formControlName="password" required minlength="6">
-        <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
-          Saissisez votre mot de passe.
-        </mat-error>
-        <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
-
-    </mat-form-field>
-
-    <button mat-raised-button class="submit-button" color="accent" [disabled]="m_loginForm.invalid"
-        style="white-space: pre-wrap !important;">
+<mat-card class="example-card">
+  <mat-card-header>
+    <mat-card-title>Se Connecter</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <form class="example-form" name="loginForm" [formGroup]="m_loginForm" novalidate (ngSubmit)="onSubmit()">
+      <table class="example-full-width" cellspacing="0">
+        <tr>
+          <td>
+            <mat-form-field class="example-full-width" appearance="outline">
+              <mat-label>{{'LOGIN.EMAIL'}}</mat-label>
+              <input matInput type="email" formControlName="email" email="true">
+              <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
+                L'adresse email est invalide.
+              </mat-error>
+            </mat-form-field>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <mat-form-field class="example-full-width" appearance="outline">
+              <mat-label>{{'LOGIN.PASSWORD'}}</mat-label>
+              <input matInput type="password" formControlName="password" required minlength="6">
+              <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
+                Saissisez votre mot de passe.
+              </mat-error>
+              <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
+            </mat-form-field>
+          </td>
+        </tr>
+      </table>
+    </form>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-raised-button class="submit-button" color="accent" [disabled]="m_loginForm.invalid"
+              style="white-space: pre-wrap !important;">
         Valider
-    </button>
-</form>
+      </button>
+    </mat-card-actions>
+</mat-card>
