--- a/bom-front/src/app/main/account-manager/register/register.component.html
+++ b/bom-front/src/app/main/account-manager/register/register.component.html
@@ -1,36 +1,53 @@
 <p>register works!</p>
-<form name="loginForm" [formGroup]="m_registerForm" novalidate (ngSubmit)="onSubmit()">
-
-  <mat-form-field appearance="outline">
-    <mat-label>{{'REGISTER.EMAIL'}}</mat-label>
-    <input matInput type="email" formControlName="email" email="true">
-    <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
-      L'adresse email est invalide.
-    </mat-error>
-  </mat-form-field>
-
-  <mat-form-field appearance="outline">
-    <mat-label>{{'REGISTER.PASSWORD'}}</mat-label>
-    <input matInput type="password" formControlName="password" required minlength="6">
-    <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
-      Le mot de passe est trop court.
-    </mat-error>
-    <mat-icon  matSuffix class="secondary-text">vpn_key</mat-icon>
-
-  </mat-form-field>
-
-  <mat-form-field appearance="outline">
-    <mat-label>{{'REGISTER.CONFIRMPASSWORD'}}</mat-label>
-    <input matInput type="password" formControlName="confirmPassword" [errorStateMatcher]="m_matcher">
-    <mat-error *ngIf="m_registerForm.hasError('notSame')">
-      Les mots de passes ne sont pas identiques.
-    </mat-error>
-    <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
-
-  </mat-form-field>
-
-  <button mat-raised-button class="submit-button" color="accent" [disabled]="m_registerForm.invalid"
-          style="white-space: pre-wrap !important;">
-    Valider
-  </button>
-</form>
+<mat-card class="example-card">
+  <mat-card-header>
+    <mat-card-title>Login</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+  <form class="example-form" name="loginForm" [formGroup]="m_registerForm" novalidate (ngSubmit)="onSubmit()">
+    <table class="example-full-width" cellspacing="0">
+      <tr>
+        <td>
+          <mat-form-field class="example-full-width" appearance="outline">
+            <mat-label>{{'REGISTER.EMAIL'}}</mat-label>
+            <input matInput type="email" formControlName="email" email="true">
+            <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
+              L'adresse email est invalide.
+            </mat-error>
+          </mat-form-field>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <mat-form-field appearance="outline">
+            <mat-label>{{'REGISTER.PASSWORD'}}</mat-label>
+            <input matInput type="password" formControlName="password" required minlength="6">
+            <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
+              Le mot de passe est trop court.
+            </mat-error>
+            <mat-icon  matSuffix class="secondary-text">vpn_key</mat-icon>
+          </mat-form-field>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <mat-form-field appearance="outline">
+            <mat-label>{{'REGISTER.CONFIRMPASSWORD'}}</mat-label>
+            <input matInput type="password" formControlName="confirmPassword" [errorStateMatcher]="m_matcher">
+            <mat-error *ngIf="m_registerForm.hasError('notSame')">
+              Les mots de passes ne sont pas identiques.
+            </mat-error>
+            <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
+          </mat-form-field>
+        </td>
+      </tr>
+    </table>
+  </form>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button class="submit-button" color="accent"
+            [disabled]="m_registerForm.invalid" style="white-space: pre-wrap !important;">
+      Valider
+    </button>
+  </mat-card-actions>
+</mat-card>
