feat: add global and reusable component in project

--- a/bom-front/src/app/main/home/home.component.html
+++ b/bom-front/src/app/main/home/home.component.html
@@ -1,2 +1,15 @@
-<img class="homepage-img" src="../../../assets/homepageImg.png" alt="contact">
+<!-- <img class="homepage-img" src="../../../assets/homepageImg.png" alt="contact"> -->
 
+<div class="container" fxLayout="column">
+    <div fxLayout="column">
+        <div>
+            <img class="background-image" src="../../../assets/img/home_background.png">
+        </div>
+        <div class="description">
+            <p>Pour être réconforter, redécouvrir ses sens, réapprendre le toucher.</p>
+            <p>Faites confiance à Bôm, notre kit d'outil thérapeutiques</p>
+            <p>pour personnes souffrant d'anorexie</p>
+        </div>
+    </div>
+    <div>test</div>
+</div>
