--- a/bom-front/src/app/main/home/home.component.sass
+++ b/bom-front/src/app/main/home/home.component.sass
@@ -1,2 +1,26 @@
+$small: 300px
+$medium: 900px
+
 .homepage-img
-  width: 100%
+    width: 100%
+    
+.container
+    // margin: 15px
+    height: 100%
+
+.background-image
+    width: 100%
+
+    // #0b214e
+.description
+    text-align: center
+    margin-top: -30px
+
+    @media screen and (min-width: $small)
+        //do Smth
+        p
+            padding: 10px
+
+    @media screen and (min-width: $medium)
+        // font-weight: 800
+        font-size: 34px
