--- a/bom-front/src/app/main/home/home.component.html
+++ b/bom-front/src/app/main/home/home.component.html
@@ -1,5 +1,3 @@
-<!-- <img class="homepage-img" src="../../../assets/homepageImg.png" alt="contact"> -->
-
 <div class="container" fxLayout="column">
     <div fxLayout="column">
         <div>
@@ -12,4 +10,5 @@
         </div>
     </div>
     <div>test</div>
+    <app-carousel></app-carousel>
 </div>
