--- a/bom-front/src/app/main/home/home.component.sass
+++ b/bom-front/src/app/main/home/home.component.sass
@@ -3,13 +3,13 @@ $medium: 900px
 
 .homepage-img
     width: 100%
-    
+
 .container
     // margin: 15px
     height: 100%
 
 .background-image
-    width: 100%
+    // width: 100%
 
     // #0b214e
 .description
