--- a/bom-front/src/app/main/account-manager/login/login.component.html
+++ b/bom-front/src/app/main/account-manager/login/login.component.html
@@ -1,32 +1,30 @@
-<p>login works!</p>
-
 <mat-card>
-  <mat-card-header>
-    <mat-card-title>Se Connecter</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <form name="loginForm" [formGroup]="m_loginForm" novalidate (ngSubmit)="onSubmit()">
-      <mat-form-field appearance="outline">
-        <mat-label>Adresse e-mail...</mat-label>
-        <input class="test" matInput type="email" formControlName="email" email="true">
-        <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
+    <mat-card-header>
+        <mat-card-title>Se Connecter</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <form name="loginForm" [formGroup]="loginForm" novalidate (ngSubmit)="onLogin()">
+            <mat-form-field appearance="outline">
+                <mat-label>Adresse e-mail...</mat-label>
+                <input class="test" matInput type="email" formControlName="email" email="true">
+                <!-- <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
           L'adresse e-mail est invalide.
-        </mat-error>
-      </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>Mot de passe...</mat-label>
-        <input matInput type="password" formControlName="password" required minlength="6">
-        <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
+        </mat-error> -->
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Mot de passe...</mat-label>
+                <input matInput type="password" formControlName="password" required minlength="6">
+                <!-- <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
           Saissisez votre mot de passe.
-        </mat-error>
-        <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
-      </mat-form-field>
-    </form>
+        </mat-error> -->
+                <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
+            </mat-form-field>
+            <mat-card-actions>
+                <button mat-raised-button class="submit-button" color="primary" [disabled]="loginForm.invalid"
+                    style="white-space: pre-wrap !important;">
+                    Se connecter
+                </button>
+            </mat-card-actions>
+        </form>
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button class="submit-button" color="primary" [disabled]="m_loginForm.invalid"
-              style="white-space: pre-wrap !important;">
-        Se connecter
-      </button>
-    </mat-card-actions>
 </mat-card>
