--- a/bom-front/src/app/main/account-manager/register/register.component.html
+++ b/bom-front/src/app/main/account-manager/register/register.component.html
@@ -2,31 +2,38 @@
 
 <mat-card>
     <mat-card-header>
-        <mat-card-title>Se Connecter</mat-card-title>
+        <mat-card-title>S'inscrire</mat-card-title>
     </mat-card-header>
     <mat-card-content>
         <form name="loginForm" [formGroup]="registerForm" novalidate (ngSubmit)="onRegister()">
+          <mat-form-field appearance="outline">
+            <mat-label>Nom utilisateur...</mat-label>
+            <input class="test" matInput type="text" formControlName="username" required minlength="6">
+            <mat-error *ngIf="username.invalid && (username.dirty || username.touched)">
+              Le username est invalide.
+            </mat-error>
+          </mat-form-field>
             <mat-form-field appearance="outline">
                 <mat-label>Adresse e-mail...</mat-label>
-                <input class="test" matInput type="email" formControlName="email" email="true">
-                <!-- <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
-          L'adresse e-mail est invalide.
-        </mat-error> -->
+                <input class="test" matInput type="email" formControlName="email" required email="true">
+                 <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
+                    L'adresse e-mail est invalide.
+                </mat-error>
             </mat-form-field>
             <mat-form-field appearance="outline">
                 <mat-label>Mot de passe...</mat-label>
                 <input matInput type="password" formControlName="password" required minlength="6">
-                <!-- <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
-          Le mot de passe est trop court.
-        </mat-error> -->
+                <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
+                  Le mot de passe est trop court.
+                </mat-error>
                 <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
             </mat-form-field>
             <mat-form-field appearance="outline">
                 <mat-label>Confirmation du mot de passe...</mat-label>
                 <input matInput type="password" formControlName="confirmPassword" [errorStateMatcher]="matcher">
-                <!-- <mat-error *ngIf="registerForm.hasError('notSame')">
-          Les mots de passes ne sont pas identiques.
-        </mat-error> -->
+                 <mat-error *ngIf="registerForm.hasError('notSame')">
+                    Les mots de passes ne sont pas identiques.
+                </mat-error>
                 <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
             </mat-form-field>
             <mat-card-actions>
