--- a/bom-front/src/app/main/account-manager/login/login.component.html
+++ b/bom-front/src/app/main/account-manager/login/login.component.html
@@ -7,16 +7,16 @@
             <mat-form-field appearance="outline">
                 <mat-label>Adresse e-mail/Nom utilisateur...</mat-label>
                 <input class="test" matInput type="email" formControlName="email" email="true">
-                <!-- <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
-          L'adresse e-mail est invalide.
-        </mat-error> -->
+                <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
+                  L'adresse e-mail est invalide.
+                </mat-error>
             </mat-form-field>
             <mat-form-field appearance="outline">
                 <mat-label>Mot de passe...</mat-label>
                 <input matInput type="password" formControlName="password" required minlength="6">
-                <!-- <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
-          Saissisez votre mot de passe.
-        </mat-error> -->
+                <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
+                  Saissisez votre mot de passe.
+                </mat-error>
                 <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
             </mat-form-field>
             <mat-card-actions>
