--- a/bom-front/src/app/main/account-manager/login/login.component.html
+++ b/bom-front/src/app/main/account-manager/login/login.component.html
@@ -26,5 +26,6 @@
                 </button>
             </mat-card-actions>
         </form>
+      <app-auth-google></app-auth-google>
     </mat-card-content>
 </mat-card>
