improve: froms design

--- a/bom-front/src/app/main/about/contact/contact.component.html
+++ b/bom-front/src/app/main/about/contact/contact.component.html
@@ -1,9 +1,8 @@
 <div>
   <div class="split-left">
     <mat-card>
-      <mat-card-header>
-        <mat-card-title>Ecrivez-nous</mat-card-title>
-      </mat-card-header>
+      <img class="logo-img" src="../../../../assets/img/logo70px.png" alt="bom">
+      <mat-card-title>Ecrivez nous</mat-card-title>
       <mat-card-content>
         <form name="contactForm" [formGroup]="m_contactForm" novalidate (ngSubmit)="onSubmit()">
 
