--- a/bom-front/src/app/main/account-manager/login/login.component.html
+++ b/bom-front/src/app/main/account-manager/login/login.component.html
@@ -1,31 +1,32 @@
 <mat-card>
-    <mat-card-header>
-        <mat-card-title>Se Connecter</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-        <form name="loginForm" [formGroup]="loginForm" novalidate (ngSubmit)="onLogin()">
-            <mat-form-field appearance="outline">
-                <mat-label>Adresse e-mail/Nom utilisateur...</mat-label>
-                <input class="test" matInput type="email" formControlName="email" email="true">
-                <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
-                  L'adresse e-mail est invalide.
-                </mat-error>
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-                <mat-label>Mot de passe...</mat-label>
-                <input matInput type="password" formControlName="password" required minlength="6">
-                <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
-                  Saissisez votre mot de passe.
-                </mat-error>
-                <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
-            </mat-form-field>
-            <mat-card-actions>
-                <button mat-raised-button class="submit-button" color="primary" [disabled]="loginForm.invalid"
-                    style="white-space: pre-wrap !important;">
-                    Se connecter
-                </button>
-            </mat-card-actions>
-        </form>
-      <app-auth-google></app-auth-google>
-    </mat-card-content>
+  <img class="logo-img" src="../../../../assets/img/logo70px.png" alt="bom">
+  <mat-card-title>Se Connecter avec</mat-card-title>
+  <app-auth-google></app-auth-google>
+  <app-auth-google></app-auth-google>
+  <mat-card-title>Ou avec votre email</mat-card-title>
+  <mat-card-content>
+    <form name="loginForm" [formGroup]="loginForm" novalidate (ngSubmit)="onLogin()">
+      <mat-form-field appearance="outline">
+        <mat-label>Adresse e-mail/Nom utilisateur...</mat-label>
+        <input class="test" matInput type="email" formControlName="email" email="true">
+        <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
+          L'adresse e-mail est invalide.
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Mot de passe...</mat-label>
+        <input matInput type="password" formControlName="password" required minlength="6">
+        <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
+          Saissisez votre mot de passe.
+        </mat-error>
+        <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
+      </mat-form-field>
+      <mat-card-actions>
+        <button mat-raised-button class="submit-button" color="primary" [disabled]="loginForm.invalid"
+                style="white-space: pre-wrap !important;">
+          Se connecter
+        </button>
+      </mat-card-actions>
+    </form>
+  </mat-card-content>
 </mat-card>
