--- a/bom-front/src/app/main/account-manager/register/register.component.sass
+++ b/bom-front/src/app/main/account-manager/register/register.component.sass
@@ -6,3 +6,47 @@ mat-card
   text-align: center
   padding-bottom: 2%
   margin: 5% 30% 20%
+
+.logo-img
+  width: 200px
+
+mat-card-title
+  color: black
+  font-family: 'Lato', sans-serif
+  font-size: 22px
+  font-weight: 100
+  line-height: 38px
+  margin: 0 0 10px
+
+button
+  display: inline-block !important
+  padding: 0.7em 1.7em !important
+  margin: 0 0.3em 0.3em 0 !important
+  border-radius: 0.2em !important
+  box-sizing: border-box !important
+  text-decoration: none !important
+  font-family: 'Roboto', sans-serif !important
+  font-weight: 400 !important
+  color: white !important
+  background-color: #3369ff !important
+  box-shadow: inset 0 0.6em 2em -0.3em rgba(0,0,0,0.15),inset 0 0 0em 0.05em rgba(255,255,255,0.12) !important
+  text-align: center !important
+  position: relative !important
+
+button:disabled
+  display: inline-block !important
+  padding: 0.7em 1.7em !important
+  margin: 0 0.3em 0.3em 0 !important
+  border-radius: 0.2em !important
+  box-sizing: border-box !important
+  text-decoration: none !important
+  font-family: 'Roboto', sans-serif !important
+  font-weight: 400 !important
+  color: white !important
+  background-color: grey !important
+  box-shadow: inset 0 -0.6em 1em -0.35em rgba(0,0,0,0.17),inset 0 0.6em 2em -0.3em rgba(255,255,255,0.15),inset 0 0 0em 0.05em rgba(255,255,255,0.12) !important
+  text-align: center !important
+  position: relative !important
+
+button:hover
+  background-color: #0d3349 !important
