feat: add facebook connexion component

--- a/bom-front/src/app/main/account-manager/login/login.component.html
+++ b/bom-front/src/app/main/account-manager/login/login.component.html
@@ -2,7 +2,7 @@
   <img class="logo-img" src="../../../../assets/img/logo70px.png" alt="bom">
   <mat-card-title>Se Connecter avec</mat-card-title>
   <app-auth-google></app-auth-google>
-  <app-auth-google></app-auth-google>
+  <app-auth-facebook></app-auth-facebook>
   <mat-card-title>Ou avec votre email</mat-card-title>
   <mat-card-content>
     <form name="loginForm" [formGroup]="loginForm" novalidate (ngSubmit)="onLogin()">
