feat: add responsive forms

--- a/bom-front/src/app/main/about/contact/contact.component.sass
+++ b/bom-front/src/app/main/about/contact/contact.component.sass
@@ -84,3 +84,11 @@ button:disabled
 
 button:hover
   background-color: #0d3349 !important
+
+@media screen and (max-width: 1400px)
+  mat-card
+    margin: 5% 20% 10%
+
+@media screen and (max-width: 720px)
+  mat-card
+    margin: 0% 0% 0%
