--- a/bom-front/src/app/main/account-manager/register/register.component.sass
+++ b/bom-front/src/app/main/account-manager/register/register.component.sass
@@ -8,7 +8,7 @@ mat-card
   margin: 5% 30% 20%
 
 .logo-img
-  width: 200px
+  width: 20em
 
 mat-card-title
   color: black
@@ -50,3 +50,12 @@ button:disabled
 
 button:hover
   background-color: #0d3349 !important
+
+@media screen and (max-width: 1400px)
+  mat-card
+    margin: 5% 20% 10%
+
+@media screen and (max-width: 720px)
+  mat-card
+    margin: 0% 0% 0%
+
